--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><head>    
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="theme-color" content="#010101">
     <meta name="twitter:description" content="CDKID">
     <meta name="twitter:card" content="summary">
