--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div style="background-color: white;width: 164px;height: 192px;margin-right: 0px;margin-left: 220px;margin-top: -80px;z-index: 99;">
                 <p class="bolduwu" style="margin-right: 0px;padding-top: 111px;padding-left: 0;margin-left: -205px;font-size: 19px;">
-                    <strong>Mads Thomasberg</strong><br><strong>Pedersen</strong></p>
+                    <strong>Rene Thomasberg</strong><br><strong>Pedersen</strong></p>
                 <div style="margin-top: -171px;z-index: 9;"><img style="margin-top: -7px;margin-left: 7px;width: 150px;/*z-index: 99;*/height: 182px;" src="./assets/portrait.jpg"></div><img style="margin-left: -35px;margin-top: -160px;z-index: 99;" src="./assets/dk.png" width="80px">
             </div>
             <div>
